sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value a
	a= getValeur(n)
        ^AlgBubbleSort1:8: error: not found: value b
	b= getValeur(n+1)
        ^AlgBubbleSort1:9: error: not found: value a
	if(a>b){echange(n,n+1); x==true}
           ^